[package]
name = "cosmcsTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmos-sdk-proto = "0.19.0"
cosmrs = { version = "0.14.0", features = ["tendermint-rpc", "grpc", "dev"] }
hex = "0.4.3"
tendermint-rpc = "0.32.0"
tokio = "1.29.1"
